@startuml

title __PHM_PROCESSES's Class Diagram__\n

  namespace com.health_insurance.phm_processes {
    class com.health_insurance.phm_processes.Reminder {
        - address : String
        - body : String
        - from : String
        {static} - serialVersionUID : long
        - subject : String
        + Reminder()
        + Reminder()
        + getAddress()
        + getBody()
        + getFrom()
        + getSubject()
        + setAddress()
        + setBody()
        + setFrom()
        + setSubject()
        + toString()
    }
  }
  

  namespace com.health_insurance.phm_processes {
    class com.health_insurance.phm_processes.Response {
        {static} - serialVersionUID : long
        + Response()
        + Response()
        + getAssignment()
        + getReminder()
        + getTask()
        + setAssignment()
        + setReminder()
        + setTask()
        + toString()
    }
  }
  

  namespace com.health_insurance.phm_processes {
    class com.health_insurance.phm_processes.Task {
        - close : String
        - escalationTimer : String
        - id : Integer
        - origId : String
        - reminderFrequency : String
        {static} - serialVersionUID : long
        - status : String
        - taskHardCloseUrl : String
        - taskSuppression : Boolean
        + Task()
        + Task()
        + getClose()
        + getEscalationTimer()
        + getId()
        + getOrigId()
        + getReminderFrequency()
        + getStatus()
        + getTaskHardCloseUrl()
        + getTaskSuppression()
        + getTaskSuppressionPeriod()
        + setClose()
        + setEscalationTimer()
        + setId()
        + setOrigId()
        + setReminderFrequency()
        + setStatus()
        + setTaskHardCloseUrl()
        + setTaskSuppression()
        + setTaskSuppressionPeriod()
        + toString()
    }
  }
  

  namespace com.health_insurance.phm_processes {
    class com.health_insurance.phm_processes.TaskActorAssignment {
        - actor : String
        - channel : String
        - escalationActor : String
        - escalationChannel : String
        {static} - serialVersionUID : long
        + TaskActorAssignment()
        + TaskActorAssignment()
        + getActor()
        + getChannel()
        + getEscalationActor()
        + getEscalationChannel()
        + setActor()
        + setChannel()
        + setEscalationActor()
        + setEscalationChannel()
        + toString()
    }
  }
  

  namespace com.health_insurance.phm_processes {
    class com.health_insurance.phm_processes.TaskSuppressionPeriod {
        - end : LocalDateTime
        {static} - serialVersionUID : long
        - start : LocalDateTime
        + TaskSuppressionPeriod()
        + TaskSuppressionPeriod()
        + getEnd()
        + getStart()
        + setEnd()
        + setStart()
        + toString()
    }
  }
  

  com.health_insurance.phm_processes.Reminder .up.|> java.io.Serializable
  com.health_insurance.phm_processes.Response .up.|> java.io.Serializable
  com.health_insurance.phm_processes.Response o-- com.health_insurance.phm_processes.TaskActorAssignment : assignment
  com.health_insurance.phm_processes.Response o-- com.health_insurance.phm_processes.Reminder : reminder
  com.health_insurance.phm_processes.Response o-- com.health_insurance.phm_processes.Task : task
  com.health_insurance.phm_processes.Task .up.|> java.io.Serializable
  com.health_insurance.phm_processes.Task o-- com.health_insurance.phm_processes.TaskSuppressionPeriod : taskSuppressionPeriod
  com.health_insurance.phm_processes.TaskActorAssignment .up.|> java.io.Serializable
  com.health_insurance.phm_processes.TaskSuppressionPeriod .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
